# uacpi

./: .gitmodules  Cargo.toml  README.md  flake.nix
uacpi/: Cargo.toml
uacpi-sys/: Cargo.toml  build.rs
uacpi-sys/src/: lib.rs
uacpi/src/: lib.rs  main.rs  status.rs
