[package]
name = "uacpi-sys"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["full-hardware", "aml-interpreter"]

sized-frees = []
full-hardware = []
aml-interpreter = []

[dependencies]

[build-dependencies]
bindgen = "0.70"
cc = "1.1"
