[package]
name = "uacpi"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["full-hardware", "aml-interpreter"]

sized-frees = ["uacpi-sys/sized-frees"]
full-hardware = ["uacpi-sys/full-hardware"]
aml-interpreter = ["uacpi-sys/aml-interpreter"]

[dependencies]
uacpi-sys.workspace = true

[lints]
workspace = true
